# ComfyUI-Persona-Director

./: .gitignore  README.md  __init__.py  config.json.example  persona_node.py  pyproject.toml  utils.py
.github/workflows/: publish.yml
assets/: workflow_basic.json
configs/: default.json  pony_illustration_optimized.json
personas/: example.json
